--- a/_posts/Javascript/2022-03-01-Set Map.md
+++ b/_posts/Javascript/2022-03-01-Set Map.md
@@ -4,3 +4,17 @@ title : Set과 Map
 categories : Javascript
 date : 2022-03-01
 ---
+
+## 자바스크립트 Set
+> Set 중복제거
+
+```javascript
+    const a = [3, 1, 3, 6, 2, 1, 7];
+    const b = [...new Set(a)]; // [3, 1, 6, 2, 7]
+```
+
+> Set length
+```javascript
+    const a = new Set([1, 2, 3]);
+    console.log(a.size); // 3
+```
