feat: programmers 105, 106, 107 update

--- a/_posts/Programmers/2023/2023-12-21-Programmers105.md
+++ b/_posts/Programmers/2023/2023-12-21-Programmers105.md
@@ -2,7 +2,7 @@
 layout : post
 title : 과일 장수
 categories : Programmers
-date : 2023-12-19
+date : 2023-12-21
 ---
 > 문제<br>
 
@@ -37,3 +37,4 @@ date : 2023-12-19
 
 ### JavaScript
 
+<script src="https://gist.github.com/kwontaehoon/a0e239a1c69f8208f03de6934c0a52b7.js"></script>
