--- a/_posts/Programmers/2023/2023-12-21-Programmers107.md
+++ b/_posts/Programmers/2023/2023-12-21-Programmers107.md
@@ -25,3 +25,4 @@ nums의 각 원소는 1 이상 1,000 이하의 자연수이며, 중복된 숫자
 
 ### JavaScript
 
+<script src="https://gist.github.com/kwontaehoon/a129025c35550f56027e4bbf49a89c3d.js"></script>
