feat: programmers 113 114(ing) update

--- a/_posts/Programmers/2023/2023-12-28-Programmers113.md
+++ b/_posts/Programmers/2023/2023-12-28-Programmers113.md
@@ -1,6 +1,6 @@
 ---
 layout : post
-title :  다트 게임
+title :  [1차] 다트 게임
 categories : Programmers
 date : 2023-12-28
 ---
@@ -29,7 +29,7 @@ Single(S), Double(D), Triple(T)은 점수마다 하나씩 존재한다.
 > 입출력 예<br>
 
 |dartResult|answer|
-|:--:|:--:|:--:|
+|:--:|:--:|
 |1S2D*3T|37|
 |1D2S#10S|9|
 |1D2S0T|3|
@@ -37,5 +37,7 @@ Single(S), Double(D), Triple(T)은 점수마다 하나씩 존재한다.
 > 코드
 
 ### JavaScript
+<script src="https://gist.github.com/kwontaehoon/405001f73a677ea0ac363a69cfabd995.js"></script>
 
 > URL
+https://gist.github.com/kwontaehoon/405001f73a677ea0ac363a69cfabd995
