feat: programmers 136, 137 update

--- a/_posts/Programmers/2024/2024-01-20-Programmers136.md
+++ b/_posts/Programmers/2024/2024-01-20-Programmers136.md
@@ -25,7 +25,8 @@ arr의 원소는 100 이하인 자연수입니다.
 > 코드
 
 ### JavaScript
-
+<script src="https://gist.github.com/kwontaehoon/99793cd3a616743f1d33361888b9e807.js"></script>
 
 
 > URL
+https://gist.github.com/kwontaehoon/99793cd3a616743f1d33361888b9e807
