fest: aws vpc rds routing 해결법 추가

--- a/_posts/AWS/2022-09-02-5.md
+++ b/_posts/AWS/2022-09-02-5.md
@@ -55,7 +55,9 @@ Check that the correct key URLs are configured for this repository.
 
 6. EC2에서 MySQL 접속한다.
  - mysql -u (마스터 사용자 이름) -p --host (엔드포인트)
- - 똑같이 데이터베이스에 있는 엔드포인트와 마스터 사용자 이름과 패스워드만 있으면 MySQL Workbench에서도 사용 가능하다. 엔드포인트는 hostname에 들어간다.
+ - 똑같이 데이터베이스에 있는 엔드포인트와 마스터 사용자 이름과 패스워드만 있으면 MySQL workbench에서도 사용 가능하다. 엔드포인트는 hostname에 들어간다.
+ - ec2에서는 접속이되지만 workbench에서 접속이 안되면 vpc -> 라우팅 테이블에서 rds 대상을 추가해준다.
+ - 라우팅 편집으로 들어가 anywhere(0.0.0.0/0)과 자동으로 뜨는 대상을 선택하여 추가해줘서 해결
 
  <br>
 
