--- a/_posts/Programmers/2024/2024-03-25-Programmers149.md
+++ b/_posts/Programmers/2024/2024-03-25-Programmers149.md
@@ -24,6 +24,7 @@ date : 2024-03-25
 > 코드
 
 ### JavaScript
-
+<script src="https://gist.github.com/kwontaehoon/c1bc3f2dcd0b61136818fb0e9d97f962.js"></script>
 
 > URL
+https://gist.github.com/kwontaehoon/c1bc3f2dcd0b61136818fb0e9d97f962
