--- a/_posts/Certification/정보처리기사1.md
+++ b/_posts/Certification/정보처리기사1.md
@@ -229,3 +229,61 @@
 - 4NF
 ##### 후보키를 통하지 않은 조인종속 제거
 - 5NF
+
+41. 구조적 프로그래밍
+
+- 순차: 구문 순서에 따라 순서대로 수행
+- 선택: 프로그램의 상태에 따라서 여러 구문들 중ㅇ네서 하나를 수행
+- 반복: 프로그램이 특정 상태에 도달할 때까지 구문을 반복하여 수행
+
+42. 객체지향 프로그래밍의 특징
+
+- 캡슐화: 자료와 이 자료를 처리하는 오퍼레이션이 한 틀 안에서 결합되어 객체라는 단위로 묶어서 사용되는 것
+- 추상화: 현실 세계에 존재하는 것을 하나의 객체로 표현한다면 복잡해지므로 특정 측면을 강조하여 나타내는 것
+- 상속성: 상위 클래스의 모든 특성을 하위 클래스가 이어받음으로써 이미 정의한 클래스를 확장할 수 있도로 지원하는 것
+- 다형성: 여러 클래스에 같은 이름의 함수가 존재하지만 동작은 다르게 수행
+
+43. 운영체제의 유형
+
+- 일괄 처리 시스템: 모든 작업을 한꺼번에 처리
+- 다중 프로그래밍 시스템: 하나의 CPU로 여러 작업을 동시에 실행
+- 실시간 처리 시스템: 제한된 시간 안에 처리해 결과를 내주는 것
+- 분산 처리 시스템: 네트워크상에 분산되어 있는 여러 컴퓨터로 작업을 처리하고 그 결과를 상호 교환
+- 클라이언트/서버 시스템: 작업을 요청하는 클라이언트와 거기에 응답하여 요청되는 작업을 처리하는 서버의 이중 구조
+- P2P 시스템: 클라이언트/서버 구조의 단점을 해결하기위해 서버를 거치지 않고 사용자와 사용자를 직접 연결
+
+44. 메모리 관리
+
+- 고정 분할 방식: 물리적 메모리를 몇 개의 영구적인 분할로 나누고, 각각의 영역에 프로그램 하나씩 적재
+- 가변 분할 방식: 매 시점 프로그램 크기에 맞게 메모리를 분할
+- 가상 메모리 기법: 용량이 작은 주기억 장치를 마치 큰 용량을 가진 것처럼 사용하는 기법
+- 페이징: 고정 분할 방식을 이용한 가상 메모리 관리 기법
+    - 직접 매핑: 페이지 테이블 전체가 물리 메모리의 운영체제 영역에 존재하는 방식
+    - 연관 매핑: 페이지 테이블 전체를 스왑 영역에 관리하는 방식으로 물리 메모리의 여유 공간이 작을 때 사용
+- 세그먼테이션: 크기를 나타내는 Limit과 물리 메모리상의 시작주소를 나타내는 Address로 관리
+
+45. CPU 스케줄링
+
+- 선점 스케줄링: 하나의 프로세스가 CPU를 차지하고 있을 때 다른 프로세스가 현재 프로세스를 중단시키고 자신이 CPU를 차지할 수 있는 기법
+    - RR, SRT 등
+- 비선점 스케줄링: 한 프로세스가 CPU를 할당받으면 다른 프로세스는 CPU를 그 프로세스부터 점유할 수 없는 기법
+    - FCFS, SJF, HRN 등
+
+46. 교착상태(Deadlock): 시스템 내에서 자원을 사용하기 위해 경쟁하거나 상호 간에 통신하는 프로세스 집합들이 영구적으로 블록킹된 상태
+
+- 상호배제(Mutual Exclusion): 자원을 요구한 프로세스는 자원이 해제될 때까지 임계 구역 밖에서 대기한다.
+- 점유와 대기(Hold And Wait): 프로세스가 자신에게 이미 할당된 자원들을 점유하고 있으면서, 다른 자원을 추가로 요구하며 기다리고 있는 것
+- 비선점(Non-Preemption): 다른 프로세스가 사용하고 있는 자원을 타 프로세스가 강제로 선점할 수 없는 것
+- 환영 대기(Circular Wait): 각 프로세스는 자신에게 할당된 자원을 가지면서 상대방의 자원을 상호 요쳥하는 경우
+
+47. 네트워크 계층
+
+- 근거리 네트워크(LAN): 한 건물 또는 작은 지역을 커버하는 네트워크
+- 광대역 네트워크(WAN): LAN에 비해 전송 거리가 넓고 라우팅 알고리즘이 필요
+- 부가가치 네트워크(VAN): 통신회선을 직접 보유하며 광범위하고도 복합적인 통신 서비스
+
+48. 테일러링: 소프트웨어 개발 방법론의 절차. 사용자 기법, 산출물 등을 수정 및 보완
+
+- ISO 12207 표준: 소프트웨어 생명주기 프로세스
+- CMMI 모델: 조직의 개발 프로세스 역량 성숙도 평가
+- SPICE 모델: 국제 표준을 제정하는 프로젝트
