--- a/_posts/Certification/정보처리기사1.md
+++ b/_posts/Certification/정보처리기사1.md
@@ -287,3 +287,65 @@
 - ISO 12207 표준: 소프트웨어 생명주기 프로세스
 - CMMI 모델: 조직의 개발 프로세스 역량 성숙도 평가
 - SPICE 모델: 국제 표준을 제정하는 프로젝트
+
+49. IT 신기술 및 네트워크 장비 트렌드 정보
+
+- IoT(사물인터넷): 각종 사물에 센서와 통신 기능을 내장하여 인터넷에 연결하는 기술
+- 클라우드 컴퓨팅: 정보통신망을 통하여 신축적으로 이요할 수 있도록 하는 정보 처리체계
+- 메시 네트워크: 각각의 노드가 네트워크에 대해 데이터를 릴레이션하는 네트워크 토폴로지
+- SDN(Software Defined Network): 소프트웨어 프로그래밍을 통해 네트워크 경로 설정과 제어 및 복잡한 운용관리를 편리하게 처리할 수 있는 차세대 네트워킹 기술
+- RFID(Radio-Frequency Identification): 주파수를 이용해 ID를 식별하는 방식으로 일명 전자태그라 불린다.
+- NFC(Near Field Communication): 근거리 무선 통신 기술
+
+50. IT 신기술 및 소프트웨어 개발 트렌드 정보
+
+- 인공지능(AI: Artificial Intelligence): 인간 지능적인 작업을 수행하는 시스템
+- 가상현실(VR: Virtual Reality): 컴퓨터를 통해서 가상현실을 체험하게 해주는 최첨단 기술
+- 증강현실(AR: Augmented Reality): 가상현실의 한 분야로 실제 환경에 가상 사물이나 정보를 합성하여 원래의 환경에 존재하는 사물처럼 보이도록 하는 컴퓨터 그래픽 기법
+- 블록체인(Blockchain): P2P 네트워크를 이용하여 온라인 금융 거래 정보를 온라인 네트워크 참여자의 디지털 장비에 분산 저장하는 기술
+
+51. 가상화 구현 방법 
+- PaaS(Platform as a Service): 사용자는 관리자가 제공하는 가상 머신을 사용
+- IaaS(Infra as a Service): 오픈스택 그리고 VMware, vSphere 같은 제품이 IaaS 구성
+- SaaS(Software as a Service): 사용자는 플랫폼이나 혹은 서비스 구성에 대해서 고려할 필요 없이 바로 어떤 서비스를 사용할지 결정하면 바로 서비스할 수 있도록 함
+
+52. 커널(Kernel): 운영체계의 다른 모든 부분에 여러 가지 기본적인 서비스 제공
+    - 자원을 효율적으로 관리 수행
+    - CPU를 주로 사용
+
+53. 쉘: 커널과 사용자 사이에서 운영체제가 제공하는 서비스를 실행할 수 있도록 지원해 주는 명령어 인터프리터
+
+54. 암호 알고리즘
+
+- 대칭키 암호화: 암호화키와 복호화를 할 때 사용하는 복호화키가 동일한 암호화 기법
+    - 스트림 암호: 하나의 Bit or Bite 단위로 암호화
+    - 블록 암호: 여러개의 Bit or 묶은 단위로 암호화
+        - DES, 3DES, AES, IDEA 등
+
+- 공개키 암호화: 공개키와 개인키라는 두 개의 암호화 키를 사용해서 암호화하고 복호화하는 방법
+    - RSA, DSA 등
+
+55. 해킹 수법
+
+- FTP 바운스 공격: FTP 프로토콜 구조의 허점을 이용한 공격 방법
+- 스머프 공격(Smurf Attack): 인터넷 프로토콜 브로드캐스트나 기타 인터넷 운용 측면을 이용하여 인터넷을 공격하는 행위
+- 트랩도어(백도어): 시스템 보안이 제거된 비밀 통로
+- 서비스 거부 공격(Denial Of Service Attack, DOS Attack): 대량의 데이터 패킷을 통신망으로 보내거나 전자우편으로 보내는 식의 공격
+- 분산 서비스 공격(Distributed Denial of Service attack, DDoS Attack): 감염된 대량의 숙주 컴퓨터를 이용해 특정 시스템을 마비시키는 공격
+- 스니핑(Sniffing): 네트워크상에서 송수신되는 패킷을 수집하여 비밀번호 등을 알아내는 해킹
+- 이더넷 스니핑(Ethernet Sniffing): 이더넷 인터페이스 소프트웨어를 사용하여 도청하는 행위
+- 세션 하이재킹(Session Hijacking): 다른 사람의 세션 상태를 훔치거나 도용하여 엑세스하는 해킹 기법
+- 스푸핑(Spoofing): 컴퓨터들이 통신하는 과정에 필요한 주소를 임의의 다른 값으로 변조하는 행위
+- 랜드공격(Local Area Network Denial Attack, LAND Attack): 출발지와 목적지 주소를 동일하게 함으로써, 공격 대상 컴퓨터의 실행 속도를 느리게 하거나 동작을 마비시켜 서비스 거부 상태에 빠지도록 하는 기법
+- 죽음의 핑(Ping of Death): 규정 크기 이상의 ICMP 패킷으로 시스템을 마비시키는 공격
+- 지능형 지속 위혐(Advanced Persistent Threat, APT): 다양한 기술을 이용해 지속적으로 정보를 수집하고 취약점을 파악하여 이를 바탕으로 피해를 주는 공격 기법
+- SQL 인젝션(SQL injection): SQL 명령문의 구문 오류를 이요하여 발생하는 공격 기법
+- 크로스사이트 스크립팅(Cross-site Scriptin, XSS): 홈페이지 스크립트를 악용할 수 있는 취약점이나 해킹 기법
+- 침입 방지 시스템(Intrusion Prevention System, IPS): 방화벽과 같은 네트워크 기반의 차단 솔루션을 논리적으로 결합한 시스템
+- 침입 탐지 시스템(Intrusion Detection System, IDS): 컴퓨터 시스템의 비정상적인 사용, 오용, 남용 등을 실시간으로 탐지하는 시스템
+
+56. 서버 접근 통제 정책
+
+- 임의적 접근 통제: 객체에 접근하고자 하는 주체의 접근 권한에 따라 접근 통제를 적용하는 방식
+- 강제저 접근 통제: 객체에 포함된 정보의 비밀성과 이러한 비밀성의 접근 정보에 대해 주체가 갖는 권한에 근거하여 객체에 대한 접근을 제한하는 방식
+- 역할기반 접근 통제: 임의적 접근 통제의 단점을 보완, 사용자에게 최소한의 권한을 부여함으로써 권한의 남용을 방지하는 방식
