feat: 정보처리기사 실기 용어 정리 1

--- a/_posts/Certification/정보처리기사2.md
+++ b/_posts/Certification/정보처리기사2.md
@@ -1,5 +1,147 @@
 # 2024 정보처리기사 실기 대비
 
-## 실기 용어 정리
+## ~2021 문제집
 
  ~~5트쨰~~
+
+ 1. UI 설계 원칙
+
+ - 직관성: 누구나 쉽게 이해하고 상용할 수 있어야 한다.
+ - 학습성: 누구나 쉽게 배우고 익힐 수 있어야 한다.
+ - 유연성: 사용자의 요구사항을 최대한 수용, 오류 최소화 할 수 있어야 한다.
+ - 유효성: 사용자의 목적을 정확하게 달성해야 한다.
+
+ 2. 스타일 가이드: 사용자 인터페이스를 만들 때 기본 원칙 레이아웃 엘리먼트 등 각종 규칙들의 기준이 되는 집합
+
+ 3. 스토리 보드: UI 설계 과정 중 디자이너와 개발자가 최종적으로 참고하는 설계 산출 문서
+ 
+ 4. 와이어프레임: 화면 단위의 레이아웃을 설계하는 작업
+
+ 5. 프로토타입: 와이어프레임 또는 스토리볻드의 정적 화면에 동적 효과를 적용하여 실제 구현된 것처럼 테스트해 볼 수 있음
+
+ 6. 소프트웨어 테스트의 기본 7원칙
+
+ - 테스팅은 결함이 존재함을 밝히는 활동이다. 
+ - 완벽한 테스팅은 불가능하다.
+ - 테스팅은 개발 초기에 시작해야 한다.
+ - 결함 집중(Pareto 법칙): 애플리케이션 결함의 대부분은 소수의 특정한 모듈에 집중되어 존재한다는 의미 = 전체 결과의 80%가 전체 원인의 20%에서 일어나는 현상
+ - 테스팅은 정황에 의존한다.
+ - 오류-부재의 궤변: 사용자의 요구와 기대에 만족하지 못해 사용성이 현저히 낮다면, 결함을 찾는 과정은 무의미
+
+7. V모델
+
+- 설치시험(검증)
+- 인수 시험(검증, 확인)
+- 시스템 시험(검증)
+- 통합 시험(검증)
+- 단위 시험
+- 디버깅
+
+- 사용자 환경
+- 시스템 정의(확인)
+- 요구 분석
+- 구조 설계
+- 상세 설계
+- 코딩
+
+8. 소프트웨어 테스트 유형
+
+- 그레이박스 테스트: 블랙박스 + 화이트박스
+- 블랙박스 테스트: 외부에 제공하는 기능 중심으로 테스트 수행
+    - 동등(동치)분할 기법
+    - 경계값 분석 기법
+    - 원인 효과 그래프 기법
+    - 의사결정테이블
+- 화이트박스 테스트: 내부 로직을 보면서 테스트 수행
+    - 기본 경로
+    - 반복경로 검사(루프 검사)
+    - 제어 구문 검사
+    - 데이터 흐름 검사
+- 명세기반 기법: 주어진 명세를 바탕으로 테스트케이스를 조출하며 표현 방식은 UML을 많이 사용 / ㅂ즐랙박스 기법
+- 구조기반 기법: 소프트웨어나 시스템의 구조를 중심으로 테스트케이스를 조출 / 화이트박스 기법
+- 경험기반 기법: 경험, 직관, 테스트의 기술 능력으로부터 테스트 케이스를 추출하는 기법
+- 인수 테스트: 사용자 요구분석 명세서에 명시된 사항을 모두 충족하는지 판정, 시스템이 예상대로 동작하고 있는지 점검 
+    - 알파 테스트: 오류와 사용상의 문제점을 사용작와 개발자가 함께 확인
+    - 베타 테스트: 다수의 사용자에게 프로그램을 사용하게 하고 오류가 발생하면 개발자에게 통보
+- 시스템 테스트: 단위, 통합 테스트 후 전체 시스템이 정상적으로 작동하는지 판정하는 기능
+- 통합 테스트: 모듈 간의 상호 작용 및 연계 동작이 제대로 기능하는지 점검
+    - 하향식 통합 방식: 메인 제어 모듈로부터 아래 방향으로 제어의 경로를 따라 하향식으로 통합하면서 테스트 진행(스텁 필요)
+    - 상향식 통합 방식: 최하위 레벨의 모듈 또는 컴포넌트로부터 위쪽 방향으로 제어의 경로를 따라 이동하면서 구축과 테스트(드라이버 필요)
+- 단위 테스트: 구현된 단위 모듈의 기능 수행 여부를 판정하고 내부에 존재하는지 논리적 오류 검출
+- 회귀 테스트: 테스트 변경 영양도를 분석하여 영향을 받는 컴포넌트를 중심으로 재 테스트 진행
+- 테스트 오라클: 테스트의 결과가 참인지 거짓인지 판단하기위해 참값을 비교하는 방법
+    - 참 오라클
+    - 샘플링 오라클
+    - 휴리스틱 오라클
+    - 일관성 검사
+
+9. 코드 리팩토링: 외부 동작으로 바꾸지 않으면서 내부 구조를 개번하는 방법
+
+10. DELETE VS TRUNCATE
+
+- DELETE
+    - DML
+    - 테이블 특정행 삭제(Where 조건 생략 시 모든 행 삭제)
+    - Rollback 가능
+    - 작업속도 느림
+- TRUNCATE
+    - DDL
+    - 테이블의 모든 행 삭제
+    - Rollback 불가
+    - 작업속도 빠름
+
+11. ALTER의 명렁어(ADD, MODIFY, DROP)
+
+- ALTER TABLE 학생 ADD ADD AGE NUMBER; : 학생 테이블에 나이 컬렴 추가
+- ALTER TABLE 학생 MODIFY AGE CHAR(10); : 학생 테이블에 나이 컬럼의 데이터 타입 변경
+- ALTER TABLE 학생 DROP AGE; : 학생 테이블에 나이 컬럼 삭제
+
+12. 데이터베이스의 데이터 분석 함수 유형
+
+- 집계 함수: GROUP BY 절과 함께 사용되어 복수 행에 대한 개수, 합계, 평균, 최소값, 최대값 등을 계산하는 함수
+- 그룹 함수: 그룹의 소계, 총계와 같이 레벨별로 집계  결과를 조히하기 위해 사용하는 함수
+- 윈도우 함수(RANK 함수): 행과 행간의 관계를 쉽게 정의하기  위해 만든 함수
+
+13. 트리거(Trigger): 데이터베이스에 특정한 변경이 가해졌을 때 DBMS가 이에 대응해서 자동적으로 호출하는 일종의 프로시저
+
+14. 접근통제: 자원에 대한 비 인가된 사용을 방지하는 기능
+
+- 임의 접근 통제(DAC, Discretionary Access Control): 사용자 개인 또는 그룹의 식별자를 기반으로 제한하는 방법
+- 강제 접근 통제(MAC, Mandatory Access Control): 높은 보안 수준을 요구하는 정보가 낮은 보안 수준의 주체에게 노출되지 않도록 접근을 제한하는 방법
+- 역할 기반 접근 통제(RBAC, Role Based Access Control): 사용자가 주어진 역할에 대한 접근 권한을 부여받는 방식
+
+15. 암호화 알고리즘
+
+- 대칭키 알고리즘
+    - 암호화키 = 복호화키
+    - 비밀키
+    - 스트림 암호화: 하나의 bit, 또는  bite 단위로 암호화
+    - 블록 암호화: 여러개의 bit를 묶어 블록단위로 암호화
+    - AES: 미국의 표준기술 연구소(NIST), 세 종류의 키(128, 192, 256 bit) 사용
+    - DES: 국가 표준 암호화 기술, 56bit 키 
+    - ARIA: 학계와 정부 기관 합작
+    - IDEA: 128bit의 키를 사용해 64bit의 평문을 8라운드에 거쳐 64bit의 암호문으로 구성
+    - RC5: 미국 RSA 연구소, 간단한 연산, 빠른 암복호화 기능
+- 비대칭키 알고리즘
+    - 암호화키 != 복호하키
+    - 공개키, 개인키
+    - RSA: 최초의 공개키 알고리즘, 소인수 분해
+    - DSA: 전자서명 알고리즘, 이산대수 문제
+    - ECC: 짧은 키로 높은 암호 강도, 타원 곡선
+
+- 해시(Hash) 함수
+    - SHA-1: 160bit 암호화 해시함수, 512bit를 입력 받아서 160bit 출력, 전자서명
+    - MD5: 128bit 암호화 해시함수, 메시지 무결성 검사
+    - HAVAL: MD5를 변형, 128bit ~ 256bit 크기 제공
+    - Tiger: 64bit CPU 최적화
+
+16. 보안 공격
+
+- SQL Injection: 쿼리를 재구성하여 원하는 정보를 열람하는 해킹 기법
+- XSS(Cross-Site Scripting): 게시판에 악성 스크립트를 작성하여 다른 사람이 그 글을 보았을 때 그 글을 본 사람의 쿠키정보를 빼내가는 해킹 기법
+- SCRF(Cross-site request forgery): 사용자가 게시물 등을 클릭할 경우 공격자가 원하는 동작이 실행되는 해킹 기법
+- LAND Attack: : 패킷을 전송할 때 출발지 IP 주소와 목적지 IP 주소를 똑같이 만들어서 공격 대상에게 보내는 공격
+
+17. 레지스터: 처리 중인 데이터나 처리 결과를 임시 보관하는 기능, CPU 내부의 초고속 기억장치
+
+- 
