feat: 정보처리기사 실기 용어 정리 2

--- a/_posts/Certification/정보처리기사2.md
+++ b/_posts/Certification/정보처리기사2.md
@@ -144,4 +144,81 @@
 
 17. 레지스터: 처리 중인 데이터나 처리 결과를 임시 보관하는 기능, CPU 내부의 초고속 기억장치
 
-- 
+- PC(Program Counter): 다음에 인출할 명령어의 주소를 가지고 있는 레지스터
+- MAR(Memory Address Register): 메모리 주소를 일시적으로 저장하는데 사용되는 레지스터
+- MBR(Memory Buffer Register): 데이터를 일시적으로 저장하는 버퍼 레지스터
+- IR(Instruction Register): 가장 최근에 인출된 명령어 코드가 저장되어 있는 레지스터
+- AC(Accumulator): 데이터나 연산결과를 일시적으로 저장하는 레지스터
+
+18. 인터럽트: 프로그램 실행 중 CPU의 현재 처리 순서를 중단시키고 다른 동작을 수행하도록 요구하는 시스템 동작
+
+19. 시스템 소프트웨어의 종류와 각 기능
+
+- 운영체제: 컴퓨터 프로그램을 위한 공통 서비스를 제공하는 프로그램
+- 어셈블러: 어셈블리어 -> 기계어
+- 컴파일러: 고급언어 -> 저급언어
+- 인터프리터: 고급언어나 코드화된 중간 언어를 입력받아 직접 기계어를 생성하여 실행해주는 프로그램
+- 전처리기: 원시 프로그램을 번역하기 전에 미리 언어의 기능을 확장한 원시 프로그램을 생성하는 시스템 프로그램
+- 링커: 서로 독립적으로 작성디ㅗ고 번역된 목적 프로그램을 호출 및 연계시키는 시스템 프로그램
+- 로더: 실행 Code를 주기억장치에 적재하여 실행 가능하도록 해주는 시스템 프로그램
+    - 할당
+    - 링킹
+    - 재배치
+    - 적재
+
+20. 쉘(Shell): 컴퓨터 내부를 관리하는 kernel과 사용자 간의 인터페이스 담당
+
+21. 운영체제 유형별 특징
+
+- 다중 프로그래밍: 여러 개의 프로그램이 동시 실행
+- 시분할 시스템: 컴퓨터를 시간적으로 분할
+- 분산처리 시스템: 시스템마다 운영체제와 메모리를 가지고 독립적으로 운여
+- 다중처리 시스템: 마이크로 프로세서 여러 개를 연결
+- 일괄처리 시스템: 데이터 한꺼번에 일괄 처리
+- 실시간처리 시스템: 데이터에 대한 처리 요구 발생 시 즉시 처리 응답
+
+22. 가상 기억장치
+
+- 페이징 기법: 가상기억장치 내의 프로그램과 데이터를 고정되게 분할한 용량을 주기억장치에 사상시키는 기법
+    - 할당단위 - 고정
+    - 외부단편화 x
+- 세그먼테이션: 가상기억장치 내의 프로그램과 데이터를 각 세그먼트가 주기억장치에 적재 될 때마다 필요한 서로 다른 크기의 세그먼트로 분할
+    - 할당단위 - 가변
+    - 내부단편화 최소화
+    - 외부단편화 o
+
+23. 메모리 인터리빙: 기억 장치 모듈에 순차적인 접근을 함으로서 접근시간을 최소화하고 성능을 향상
+
+24. 교착상태(Dead lock): 서로 다른 프로세스가 각자 자신이 소유한 자원을 포기하지 않고 상대 프로세스의 자원을 무한대기하고 있는 상태
+
+- 상호 배제: 프로세스가 자원을 배타적으로 점유하여 다른 프로세스가 그 자원을 사용할 수 없음
+- 점유와 대기: 한 프로세스가 자원을 점유하고 있으면서 또 다른 자원을 요청하여 대기하고 있는 상태
+- 비 선점: 한 프로세스가 점유한 자원에 대해 다른 프로세스가 선점할 수 없고, 오직 점유한 프로세스만이 해제 가능
+- 환형 대기: 두 개 이상의 프로세스간 자원의 점유와 대기가 하나의 원형을 구성한 상태
+- 은행가 알고리즘: 자원을 할당한 후에도 안정 상태로 남아있게 되는 지를 사전에 검사하여 교착상태의 발생을 회피하는 방법
+    - 예방(Prevention): 상호배제, 점유와 대기, 비선점, 환형대기
+    - 회피(Avoidance): 은행가 알고리즘, Wait-die/wound-wait 알고리즘
+    - 발견(Detection): 시스템의 상태를 감시 알고리즘을 통해 교착상태 검사
+    - 회복(Recovery): Deadlock이 없어질 때까지 프로세스를 kill하여 제거
+
+25. 임계영역: 여러 개의 프로세스가 공유하는 데이터 및 자원에 대해 어느 한 시점에는 하나의 프로세스만 사용하도록 지정된 공유 영역
+
+26. 상호배제: 다른 모든 프로세스가 해당 공유 자원을 사용하지 못하도록 제어하는 방법
+
+- 해결방안
+    - 데커(Dekker) 알고리즘
+    - 피터슨(Peterson) 알고리즘
+    - 램포트(Lamport) 베이커리 알고리즘
+    - 세마포어(Semaphore)
+
+27. UNIX 명령어
+
+- ls: 파일 목록 확인
+- chmod: 접근권한 변경
+- du: 디렉토리 아래의 디스크 사용현황 출력
+- fork: 자식 프로세스 생성
+- cat: cat [파일명]을 통해 파일 내용 확인
+
+28. 가상 메모리: 물리적인 메모리 용량보다 더 큰 용량의 프로그램을 실행할 수 있도록 보조기억장치를 메모리처럼 사용할 수 있도록 하는 가상화 기술
+
+29. 메모리 인터리빙: 기억 장치 모듈에 순차적인 접근을 함으로서 접근시간을 최소화하고 성능을 향상
