--- a/_posts/Certification/정보처리기사2.md
+++ b/_posts/Certification/정보처리기사2.md
@@ -222,3 +222,74 @@
 28. 가상 메모리: 물리적인 메모리 용량보다 더 큰 용량의 프로그램을 실행할 수 있도록 보조기억장치를 메모리처럼 사용할 수 있도록 하는 가상화 기술
 
 29. 메모리 인터리빙: 기억 장치 모듈에 순차적인 접근을 함으로서 접근시간을 최소화하고 성능을 향상
+
+30. NoSQL: 수평적 확장이 가능하며 다수 서버들에 데이터 복제 및 분산저장이 가능한 데이터베이스
+
+31. 데이터 스키마 구조
+
+- 내부: 물리적인 기억장소와 가장 가까운 단계
+- 외부: 사용자와 가장 가까운 단계
+- 개념: 내부와 외부단계 사이에 위치하며 중간연결 단계
+
+32. 데이터베이스 키
+
+- 후보키: 릴레이션을 구성하는 속성들 중에서 튜플을 유일하게 식별할 수 있는 하나 또는 몇 개의 속성 집합, 유일성/최소성 모두 만족
+- 기본키: 릴레이션의 유일한 식별자, 유일성/최소성 모두 만족
+- 대체키: 후보키가 둘 이상 되는 경우에 기본키로 선택되지 못한 후보키들
+- 슈퍼키: 유일성만 있고 최소성이 없는 속성의 집합
+- 외래키: 한 테이블의 키 중 다른 테이블의 튜플을 식별할 수 있는 키
+    - 유일성: 하나의 키 값으로 하나의 튜플만을 유일하게 식별
+    - 최소성: 모든 튜플을 유일하게 식별하기 위해 꼭 필요한 속성들로 구성된 것
+
+33. ER 모델: 피터첸이 제안한, 실세계의 데이터를 개체들과 그들 간의 관계에 의해 묘사하여 정의하는 모델링 방법
+
+34. 데이터베이스 무결성의 종류
+
+- 참조 무결성: 외래키 값은 그 외래키가 기본키로 사용한 릴레이션과 촘조 무결성 제약을 거친다.
+- 도메인 무결성: 속성(컬럼)에 대한 무결성 규칙
+
+35. 관계대수: 관계형 데이터베이스에서 원하는 정보와 그 정보를 검색하기 위해서 어떻게 유도하는가를 기술하는 절차적인 언어
+
+36. 관계해석: 수학의 술어해석에 기반을 두고 있으며 원하는 정보가 무엇이라는 것만 정의하는 비절차적인 언어
+
+37. 트랜잭션: 데이터베이스의 상태를 변화시키기 위해서 수행하는 작업의 단위
+
+- 원자성(Atomicity): 한 가지라도 실패할 경우 전체가 취소, 연산 전체가 성공 또는 실패
+- 일관성(Consistency): 모순 없이 일관성 있는 DB 상태 보존
+- 고립성(Isolation): 현재 수행 중인 트랜잭션이 완료될 때까지 트랜잭션이 생성한 중간 연산 결과에 다른 트랜잭션들이 접근할 수 없음을 의미
+- 영속성(Durability): 성공이 완료된 트랜잭션의 결과는 영구적으로 데이터베이스에 저장
+
+38. 데이터베이스 회복 기법
+
+- 지연 갱신: 트랜잭션이 성공적으로 종료될 때까지 데이터베이스에 대한 갱신을 연기하는 기법
+- 즉시 갱신: 트랜잭션이 데이터를 변경하면 트랜잭션이 부분 완료되기 전이라도 즉시 실제 데이터베이스에 반영하는 기법
+- 그림자 페이지: 일정 크기의 페이지 단위로 구성하여 복사본인 그림자 페이지를 별도 보관해 두고 변경 작업 수행
+- 검사점: 체크포인트 체크 기법
+- 미디어 회복: 로그를 이용하여 가장 최근 덤프 이후 완료된 트랜잭션들에 대해 Redo 작업 수행
+    - REDO: 가장 최근의 복제본을 적재 후 이후 일어난 변경만을 로그를 이용하여 재실행함으로써 데이터베이스 회복 기법의 구성요소
+    - UNDO: 데이터베이스 내용 자체는 손상되지 않았지만 변경 내용에 대한 신뢰성을 잃어버린 경우 모든 내용을 취소
+
+39. 병행제어: 여러 트랜잭션이 성공적으로 동시에 실행될 수 있도록 지원하는 기능
+
+
+40. OSI 7계층
+
+- 응용: 사용자와 네트워크 간의 응용 서비스 연결, HTTP, TELNET, DHCP, DNS 등
+- 표현: 데이터의 형식 설정과 부호 교환, 암호화, 해독, MIME, SSL 등
+- 세션: 응용 프로세스 간의 연결 접속 및 동기 제어, SSH, RPC 등
+- 전송: 프로세스 간 논리적 통신 서비스 제공, 오류검출과 복구, 흐름제어, TCP, UDP, Segment
+- 네트워크: 단말 간 시스템끼리 Data를 전송하기위한 경로, IP, ARP, ICMP, IGMP, IPsec, Packet
+- 데이터링크: 인접 시스템 간의 데이터 전송, 전송 오류제어, Frame
+- 물리: 통신회선으로 0과 1비트의 정보 전달, Bits
+
+41. IPv4
+
+- 32bit
+- 8bit씩 4부분으로 나눈 10진수
+- Multi, Uni, Broadcast
+
+42. IPv6
+
+- 128bit
+- 16bit씩 8부분으로 나눈 16진수
+- Multi, Uni Anycast
