feat: 정보처리기사 실기 용어 정리 4

--- a/_posts/Certification/정보처리기사2.md
+++ b/_posts/Certification/정보처리기사2.md
@@ -1,6 +1,6 @@
 # 2024 정보처리기사 실기 대비
 
-## ~2021 문제집
+## 2021 문제집
 
  ~~5트쨰~~
 
@@ -293,3 +293,154 @@
 - 128bit
 - 16bit씩 8부분으로 나눈 16진수
 - Multi, Uni Anycast
+
+43. 디지털 변조: 디지털신호 -> 아날로그 신호
+
+- 진폭 편이변조(ASK): 
+- 주파수 편이 변조(FSK)
+- 위상 편이 변조(PSK)
+- 펄스 부호 변조(PCM)
+    - 표본화: 일정한 시간적 간격으로 나누어 표본 추출
+    - 양자화: 연속적인 아날로그 값을 이산적인 디지털 값으로 변경
+    - 부호화: 2진 표현으로 변경
+
+44. 프로토콜: 서로 다른 시스템이 있는 두 개체 간에 성공적으로 데이터를 전송하는 통신규약
+
+- 구문(Syntax): 데이터의 구조나 형태 정의
+- 타이밍(Timing): 어떤 데이터를 보낼 것인지 얼마나 빨리 보낼 것인지 결정
+- 의미(Semantics): 데이터의 각 부분이 무엇을 뜻하는지, 오류제어, 흐름제어
+
+45. 3Way-HandShaking: TCP 프로토콜은 단말기와 단말기 간의 세션을 설정할 때 3방향 연결설정을 통하여 신뢰성 있는 정보 전송
+
+46. 주요 프로토콜
+
+- SNMP(Simple Network Management Protocol): 네트워크 장비를 관리 감시
+- DNS(Domain Name System): IP 주소와 호스트 이름을 서로 연결하여 해석
+- TCP(Transmission Control Protocol): 전송제어 프로토콜
+- UDP(User Datagram Protocol): 신뢰성이 낮은 데이터그램 프로토콜
+- RTP(Real-Time Transport Protocol): 실시간으로 비디오나 오디오 패킷을 전송하기 위해 표준화된 프로토콜
+- SCTP(Streaming Control Transmisstion Protocol): UDP와 TCP의 일부 장점을 결합하여 고도의 신뢰 전송을 제공하는 전송 계층 프로토콜
+- ARP(Address Resolution Protocol): IP주소를 물리 주소로 변환
+- RARP(Reverse ARP): 물리주소를 IP주소로 변환
+- IPSec(Internet Protocol Security Protocol): IP패킷 단위로 인증 및 암호화를 하는 프로토콜
+- ICMP(Internet Control Message Protocol): TCP/IP에서 IP 패킷을 처리할 때 발생되는 문제를 알리거나 IP 계층에서 필요한 기타 기능 수행
+- HLDC(High-Level Data-Link Control): 고속 데이터 전송
+- X.25: DTE로 명명한 사용자 컴퓨터와 DCE로 명명된 통신 회사 장비사이에서 패킷 단위로 교환함으로써 통신의 방법을 규정
+- Json: 속성-값 쌍 또는 키-값으로 이루어진 데이터 오브젝트를 전달하기 위해 사용하는 개방형 표준포맷
+
+47. WPAN(Wireless Personal Area Network): 10m 이내의 짧은 거리에 존재하는 여러 디지털 장치를 식별, ad-hoc 기반의 무선 네트워크 기술
+
+- 블루투스: 2.4Ghz  ISM 대역에서 적은 전력으로 에너지 사용을 효율화한 WPAN 기술
+- ZigBee: 저속 전송으로 다양한 가전제품 등을 리모컨 하나로 모두 동작시킬 수 있는 기술
+- UWB: 매우 낮은 전력,초 광대역으로 디지털 데이터 전송
+
+48. NAT(Network Access Translation): 외부 네트워크에 알려진 것과 다른 IP 주소를 사용하는 내부 네트워크에서 IP 주소를 변환하는 기술
+
+49. DHCP(Dynamic Host Configuration Protocol): 임대 개념의 IP 주소를 할당하고 관리
+
+50. CDN(Contents Delivery Network): 최적의 경로로 사용자에게 컨텐츠를 전달하는 기술
+
+51. SDN(SW Defined NW): 표준 인터페이스로 분리하여 네트워크 개방성을 제공하는 기술
+
+52. RAID: 여러 개의 물리적인 디스크를 중복성을 가진 하나의 논리적인 디스크어레이로 변환하는 기술
+
+- RAID 0: 중복이 없이 데이터를 여러 개의 디스크에 분할하여 저장
+- RAID 1: 복제, 중복을 저장하는 방식
+- RADI 5: 데이터와 패리티 데이터를 분산 저장하여 각 분리된 디스크에 저장
+
+53. 하이퍼바이저: 동시에 다수의 운영 체제를 구동시킬 수 있는 하드웨어와 운영 체제 사이의 얇은 소프트웨어 가상화 기술
+
+54. HIPO: 하향식 소프트웨어 개발을 위한 무서화 도구
+
+55. 요구사항 정의
+
+- 기능적 요구사항: 시스템에 서 제공되어야할 특정 기능을 정의
+- 비기능적 요구사항: 시스템의 전체적 품질이나 기능적 요구사항의 구현 시 고려해야하는 제약사항
+
+56. 객체지향의 특징
+
+- 캡슐화: 속성과 메소드 연산을 하나로 묶어서 객체 구성
+- 추상화: 공통 성질을 추출하여 수퍼클래스로 구성
+- 다형성: 동일한 이름의 여러 오퍼레이션을 다른 사양으로 정의
+- 정보은닉: 캡슐화된 항목을 다른 객체로부터 숨김
+- 상속성: 부모 클래스의 속성과 메소드를 상속받아 사용
+
+57. 클라우드 컴퓨팅: 가상화된 컴퓨터의 시스템 리소스를 요구하는 직스 서비스 형태로제공하는 방식
+
+- IaaS(Infra as a Service): 가상머신 환경 제공
+- PaaS(Platforrm as as Service): 가상 운영체제, 웹 서버 등 자원 및 개발도구 제공
+- SaaS(Service as a Service): 응용 소프트웨어와 데이터베이스 등 제공
+
+58. 객체지향 분석 럼바우 방법론: 모든 소프트웨어 구성 요소를 그래픽 표기법을 확용하여 모델링하는 기법
+
+- 단계 순서: 동적 모델링 -> 기능 모델링 -> 객체 모델링
+- 동적 모델링: 상태 다이어그램을 사용하여 시스템의 행위 기술 
+- 기능 모델링: 어떤 데이터를 입력하면 어떤 결과를 구할 것인지 표현, 자료 흐름도 이용
+- 객체 모델링: 객체를 찾아내어 속성과 연산 식별 및 객체들 간의 관계 규정
+- (Booch)부치 방법: 클래스와 객체들을 분석 및 식별하고 클래스의 속성과 연산을 정의, Use Case 사용
+- Coad-Yourdon(코드-요든) 방법: E-R 다이어그램을 사용하여 객체의 행위를 모델링
+- Wirfs-Brock(워프스-브룩) 방법: 고객 명세서를 평가하여 설계 작업까지 연속적으로 수행하는 기법
+
+59. 다이어그램 종류
+
+- 구조적 다이어그램: 시스템의 정적구조와 시스템의 구성 요소, 구성 요소들 간의 관계
+- 행위 다이어그램: 객체들의 동적인 행위, 시스템의 연속된 변경
+- 상호작용 다이어그램: 객체와 객체간의 상호작용을 메시지 흐름으로 표현
+- 유즈케이스 다이어그램: 시스템이 제공하는 기능과 서비스 및 관련된 외부 요소를 사용자 관점에서 표현
+    - 엑터: 시스템의 외부에 있고, 시스템과 상호작용을 하는 사람, 시스템을 의미
+    - 유즈케이스: 사용자 입장에서 바라본 시스템의 기능
+    - 관계
+- 객체 다이어그램: 클래스의 여러 객체 인스턴스를 나타내는 대신 실제 클래스를 사용하고 관계있는 모든 인스턴스 표현
+- 시퀀스 다이어그램: 객체 간 상호작용 메시지 흐름을 시간 또는 순서로 표현
+- 액티비티 다이어그램: 로직이나 조건에 따른 처리흐름을 순서에 따라 정의
+- 
+
+60. 애자일(Agile): 기민한, 좋은 것을 빠르고 낭비 없게 만드는 것 또는 요구사항 변화에 유연하게 대응하기 위해 일정한 주기를 반복하면서 개발하는 방법
+
+- XP(eXtreme Programing): 의사소통 개선과 즉각적인 피드백에 의한 단순한 코딩
+- SCRUM(스크럼): 30일마다 동작 가능한 제품을 제공하는 스프린트를 중심으로 진행
+- Lean: 프로세스의 낭비요소를 제거 후 결과를 측정
+
+61. 유즈케이스 분석 클래스
+
+- 엔티티 클래스: 정보를 관리하는 기능
+- 경계 클래스: 사용자 인터페이스 제어
+- 제어 클래스: 시스템이 제공하는 기능의 로직 및 제어 담당
+
+62. 객체 지향 설계 원칙
+
+- 단일 책임 원칙: 객체는 단 하나의 책임을 가져야 함
+- 개방 폐쇄 원칙: 기존의 코드를 변경하지 않으면서 기능을 추가할 수 있도록 설계
+- 리스코프 치환의 원칙: 하위 클래스 및 타입들은 상위 타입들이 사용되는 곳에 대체될 수 있어야 함
+- 인터페이스 분리의 원칙: 인터페이스를 클라이언트에 특화되도록 분리하여 설계
+- 의존성 역전의 원칙: 의존관계를 맺을 때 변화하기 쉬운것 또는 자주 변화하는 것보다는 변화하기 어렵거나 거의 변화가 업슨ㄴ 것에 의존해야 함
+
+63. 공통모듈: 전체 프로그램의 기능 중 공통적으로 사용할 수 있는 모듈
+
+- 공통 모듈 작성 원칙
+    - 정확성
+    - 명확성
+    - 와전성
+    - 일관성
+    - 추적성
+
+64. 디자인 패턴: 소프트웨어 프로그래머들이 유용하다고 생각되는 객체들간의 일반적인 상호작용 방법들을 모든 목록
+
+- 생성 패턴: 클래스 정의와 객체 생성 방식의 구조화 캡슐화 방법
+    - 팩토리 메소드: 객체를 생성하기 위한 인터페이스를 따로 정의하며 어떤 클래스가 객체를 생성하는 일을 하는 하위 클래스가 담당토록 설계
+    - 싱클톤: 지정한 클래스의 인스턴스가 반드시 한 개만 존재하도록 하는 패턴
+- 구조 패턴: 객체들을 조직화 하는 방법과 기능을 구현하기 위해 객체를 구성하는 방식
+    - 어댑터: 클래스의 재사용성을 높이기 위해 요구되는 특정 기능으로 변환/적용하여 클래스 간 호환성을 확보하는 패턴
+    - 파사드: 간단한 인터페이스가 복잡한 서브 시스템의 주요 기능을 사용할 수 있는 패턴
+- 행위패턴: 로직 수행에 주로 이용하여 객체 간 연동에 대한 유형 제공
+    - 옵저버: 한 객체의 상태가 바뀌면 그 객체에 의존하는 다른 객체들에게 통지되고 필요 시 자동으로 내용이 갱신되는 패턴
+    - 인터프리터: 언어의 다양한 해석
+- MVC 패턴: 모델, 뷰, 컨트롤러로 구성된 아키텍처, 사용자 인터페이스로부터 비즈니스 로직을 분리하는 방법
+
+65. 미들웨어: 클라이언트와 서버 사이의 통신 담당
+
+- RPC(Remote Procedure Call): 원격 프로시저를 로컬 프로시저처럼 호출
+- MOM(Message Oriented Middleware): 메시지 기반의 비동기형 메시지 전달 방식
+- TP-모니터: 온라인 업무에서 트랜잭션을 처리/감시
+- ORB(Object Request Broker): 코바 표준스펙을 구현한 객체지향 미들웨어
+- WAS(Web Application Server): 웹 환경을 구현하기 위한 미들웨어
