--- a/_posts/Typescript/1.md
+++ b/_posts/Typescript/1.md
@@ -94,3 +94,68 @@ interface Vector1D { x: number; }
 interface Vector2D extends Vector1D { y: number; }
 interface Vector3D extends Vector2D { z: number; }
 ```
+
+8. <span style="color:blue">타입 공간과 값 공간의 심벌 구분하기</span>
+
+- 타입스크립트에서 코드를 읽을 때 타입인지 값인지 구분하는 방법을 터득해야한다. (타입스크립트 플레이그라운드 이용)
+- 모든 값은 타입을 가지지만 타입은 값을 가지지 않는다.
+- 많은 연산자들과 키워드들은 타입 공간과 값 공간에서 다른 목적으로 사용된다.
+
+9. <span style="color:blue">타입 단언보다는 타입 선언을 사용하기</span>
+
+- 타입 선언
+```typescript
+interface Person { name: string };
+
+const alice: Person = { name: 'Alice' };
+```
+- 타입 단언
+```typescript
+interface Person { name: string };
+
+const bob = { name: 'Bob' } as Person;
+```
+- 타입 선언을 선호하는 이유
+```typescript
+// case 1
+const alice: Person = {};
+// 'Person' 유형에 필요한 'name' 속성이 '{}' 유형에 없습니다.
+
+const bob = {} as Person; // 오류 없음
+
+// case2
+
+const alice: Person = {
+    name: 'Alice',
+    occupation: 'TypeScript developer'
+}
+// 개체 리터럴은 알려진 속성만 지정할 수 있으며
+// 'Person' 형식에 'occupation'이 없습니다.
+
+const bob = {
+    name: 'Bob',
+    occupation: 'JavaScript developer'
+} as Person; // 오류 없음
+```
+- 화살표 함수 타입 선언
+```typescript
+const people = ['alice', 'bob', 'jan'].map((name): Person => ({name}){
+  ...
+});
+```
+
+10. <span style="color:blue">객체 래퍼 타입 피하기</span>
+
+- string 객체 래퍼
+```typescript
+function getStringLen(foo: String) {
+    return foo.length;
+}
+getStringLen("hello"); // 정상
+getStringLen(new String("hello")); // 정상
+
+function inGreeting(phrase: String) {
+    return ['hello', 'good day'].includes(phrase);
+}
+// 'String' 형식의 인수는 'string' 형식의 매개변쉥 할당할 수 없음
+```
