--- a/_posts/Typescript/1.md
+++ b/_posts/Typescript/1.md
@@ -29,6 +29,9 @@ const x: number = null; // 에러 발생
 
 - 호출에 사용되는 매개변수의 속성들이 매개변수의 타입에 선언된 속성만을 갖지않음
 ```typescript
+function calculateLength(v: Vector2D) {
+    return Math.sqrt(v.x * v.x + v.y * v.y);
+}
 interface Verctor2D {
     x: number;
     y: number;
@@ -157,5 +160,179 @@ getStringLen(new String("hello")); // 정상
 function inGreeting(phrase: String) {
     return ['hello', 'good day'].includes(phrase);
 }
-// 'String' 형식의 인수는 'string' 형식의 매개변쉥 할당할 수 없음
+// 'String' 형식의 인수는 'string' 형식의 매개변수에 할당할 수 없음
+```
+
+11. <span style="color:blue">잉여 속성 체크의 한계 인지하기</span>
+
+- 타입이 명시된 변수에 객체 리터럴을 할당할 때 타입스크립트는 해당 타입의 속성이 있는지, 그 외의 속성이 없는지 확인
+```typescript
+interface Room {
+    numDoors: number;
+    ceilingHeightFt: number;
+}
+
+interface Options {
+    title: string;
+    darkMode?: boolean;
+}
+
+function createWindow(options: Options) {
+    if(options.darkMode) {
+        setDarkMode();
+    }
+}
+
+const r: Room = {
+    numDoors: 1,
+    ceilingHeightFt: 10,
+    elephant: 'present'
+    // 'Room' 형식에 'elephant'가 없습니다.
+}
+
+createWindow({
+    title: 'Spider Solitaire',
+    darkmode: true
+    // 'Options' 형식에 'darkmode'가 없습니다.
+});
+
+```
+- 타입 구문이 없는 임시 변수를 사용하면 잉여 속성 체크가 적용되지않는다.
+```typescript
+interface Room {
+    numDoors: number;
+    ceilingHeightFt: number;
+}
+
+const obj = {
+    numDoors: 1,
+    ceilingHeightFt: 10,
+    elephant: 'present'
+}
+const r: Room = obj; // 정상
+```
+
+12. <span style="color:blue">함수 표현식에 타입 적용하기</span>
+
+- 함수 타입 선언
+```typescript
+function add(a: number, b: number) { return a + b; }
+function sub(a: number, b: number) { return a - b; }
+
+type BinaryFn = {a: number, b: number } => number;
+const add: BinaryFn = {a, b} => a + b;
+const sub: BinaryFn = {a, b} => a - b;
+```
+
+13. <span style="color:blue">타입과 인터페이스의 차이점 알기</span>
+
+- 유니온 타입은 있지만 유니온 인터페이스라는 개념은 없다.
+```typescript
+type AorB = 'a' | 'b';
+
+type Input = {
+    /* ... */
+} 
+type Output = {
+    /* ... */
+} 
+interface AorB2 {
+    [name: string]: Input | Output;
+}
+
+type NamedVariable = (Input | Output) & { name: string };
+// 인터페이스로 표현x
+```
+- 인터페이스의 보강
+```typescript
+interface IState {
+    name: string;
+    capital: string;
+}
+
+interface IState {
+    population: number;
+}
+
+const wyoming: IState = {
+    name: 'Wyoming',
+    capital: 'Cheyenne',
+    population: 500_000
+}
+```
+- 한 가지 일관된 스타일을 확립하고, 보강 기법이 필요한지 고려
+> 복잡한 타입: type
+간단한 객체 타입: interface
+일관된 타입: type
+어떤 API에 대한 타입 선언 작성: interface
+
+14. <span style="color:blue">타입 연산과 제너릭 사용으로 반복 줄이기</span>
+
+- 타입에 이름 붙이기
+```typescript
+function distance(a: { x: number, y: number }, b: { x: number, y: number }) {
+    return Math.sqrt(Math.pow(a.x - b.x, 2) + Math.pow(a.y -b.y, 2));
+}
+
+interface Point2D {
+    x: number;
+    y: number;
+}
+function distance(a: Point2D, b: Point2D) { /* ... */}
+```
+- 확장
+```typescript
+interface Person {
+    firstName: string;
+    lastName: string;
+}
+
+interface PersonWithBirthDate {
+    firstNmae: string;
+    lastName: string;
+    birth: Date;
+}
+
+interface PersonWithBirthDate extends Person {
+    birth: Date;
+}
+```
+- 부분 중복 제거: Pick
+```typescript
+interface State {
+    userId: string,
+    pageTitle: string;
+    recentFiles: string[];
+    pageContents: string;
+}
+
+interface TopNavState {
+    userId: string;
+    pageTitle: string;
+    recentFiles: string[];
+}
+
+type TopNavState = {
+    [k in 'userId' | 'pageTitle' | 'recentFiles']: State[k]
+}
+
+=
+
+type TopNavState = Pick<State, 'userId' | 'pageTitle' | 'recentFiles'>;
+```
+
+- 타입 반복
+```typescript
+interface SaveAction {
+    type: 'save'
+}
+
+interface loadAction {
+    type: 'load'
+}
+
+type Action = SaveAction | LoadAction;
+type ActionType = 'save' | 'load'; // 타입의 반복
+
+type ActionType = Action['type']; // 타입은 'save' | 'load'
 ```
